--- a/style.css
+++ b/style.css
@@ -25,7 +25,13 @@ img {
     background-color: red;
 }
 
-.detail-image{
+.detail-image {
     margin: auto;
+    width: 600px;
+    height: 600px;
     background-color: blue;
+}
+.image {
+    width: 600px;
+    height: 600px;
 }
