--- a/style.css
+++ b/style.css
@@ -2,10 +2,13 @@
 img {
     width: 180px;
     height: 180px;
+    border-radius: 20px;
 }
 .main {
     margin: auto;
     width: 620px;
+    background: rgb(250, 230, 205);
+    border-radius: 15px;
    
     
 }
@@ -23,15 +26,24 @@ img {
     width: 180px;
     height: 180px;
     background-color: red;
+    border-radius: 20px;
 }
 
 .detail-image {
     margin: auto;
     width: 600px;
     height: 600px;
-    background-color: blue;
+    
 }
-.image {
+.one-image {
     width: 600px;
     height: 600px;
+}
+.name {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.description {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.4;
 }
